--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,17 @@
 	    <artifactId>jackson-databind</artifactId>
 	    <version>2.11.1</version>
   	</dependency>
-  	
+<dependency>
+    <groupId>org.gradle</groupId>
+    <artifactId>gradle-tooling-api</artifactId>
+    <version>7.3-20210825160000+0000</version>
+</dependency>
+<dependency>
+    <groupId>org.owasp</groupId>
+    <artifactId>dependency-check-gradle</artifactId>
+    <version>6.5.3</version>
+</dependency>
+
 <!-- -->
 <dependency>
     <groupId>org.eclipse.jgit</groupId>
@@ -38,6 +48,11 @@
     <groupId>org.apache.maven.shared</groupId>
     <artifactId>maven-invoker</artifactId>
     <version>2.1.1</version>
+</dependency>
+<dependency>
+    <groupId>org.tmatesoft.svnkit</groupId>
+    <artifactId>svnkit</artifactId>
+    <version>1.10.4</version>
 </dependency>
 <dependency>
     <groupId>org.codehaus.sonar</groupId>
