--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>com.jiantsquid.core</groupId>
-  <artifactId>com.jiantsquid.core</artifactId>
-<version>0.0.1-SNAPSHOT</version>
+  <groupId>org.jiantsquid</groupId>
+  <artifactId>org.jiantsquid.core</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
 
 <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,52 +15,51 @@
 	    <artifactId>jackson-databind</artifactId>
 	    <version>2.11.1</version>
   	</dependency>
-<dependency>
-    <groupId>org.gradle</groupId>
-    <artifactId>gradle-tooling-api</artifactId>
-    <version>7.3-20210825160000+0000</version>
-</dependency>
-<dependency>
-    <groupId>org.owasp</groupId>
-    <artifactId>dependency-check-gradle</artifactId>
-    <version>6.5.3</version>
-</dependency>
+  	<dependency>
+	    <groupId>org.apache.maven</groupId>
+	    <artifactId>maven-project</artifactId>
+	    <version>2.2.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.maven</groupId>
+	    <artifactId>maven-core</artifactId>
+	    <version>3.8.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.eclipse.jgit</groupId>
+	    <artifactId>org.eclipse.jgit</artifactId>
+	    <version>6.0.0.202111291000-r</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.maven.shared</groupId>
+	    <artifactId>maven-invoker</artifactId>
+	    <version>2.1.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.codehaus.sonar</groupId>
+	    <artifactId>sonar-ws-client</artifactId>
+	    <version>5.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.tmatesoft.svnkit</groupId>
+	    <artifactId>svnkit</artifactId>
+	    <version>1.10.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.owasp</groupId>
+	    <artifactId>dependency-check-gradle</artifactId>
+	    <version>6.5.3</version>
+	</dependency>
+<!--
 
-<!-- -->
-<dependency>
-    <groupId>org.eclipse.jgit</groupId>
-    <artifactId>org.eclipse.jgit</artifactId>
-    <version>6.0.0.202111291000-r</version>
-</dependency>
-
-<dependency>
-    <groupId>org.apache.maven</groupId>
-    <artifactId>maven-project</artifactId>
-    <version>2.2.1</version>
-</dependency>
-<dependency>
-    <groupId>org.apache.maven</groupId>
-    <artifactId>maven-core</artifactId>
-    <version>3.8.4</version>
-</dependency>
-
-<dependency>
-    <groupId>org.apache.maven.shared</groupId>
-    <artifactId>maven-invoker</artifactId>
-    <version>2.1.1</version>
-</dependency>
-<dependency>
-    <groupId>org.tmatesoft.svnkit</groupId>
-    <artifactId>svnkit</artifactId>
-    <version>1.10.4</version>
-</dependency>
 <dependency>
     <groupId>org.codehaus.sonar</groupId>
     <artifactId>sonar-ws-client</artifactId>
     <version>5.1</version>
 </dependency>
-  </dependencies>
 
+-->
+  </dependencies>
   <build>
   <plugins>
     <plugin>    
