--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
 </properties>
 
   <dependencies>
+    <dependency>
+	    <groupId>com.hazelcast</groupId>
+	    <artifactId>hazelcast</artifactId>
+	    <version>4.2</version>
+	</dependency>
+	<dependency>
+	 <groupId>io.vertx</groupId>
+	 <artifactId>vertx-hazelcast</artifactId>
+	 <version>4.0.3</version>
+	</dependency>
   	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
